<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/One"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one" />

        <Button
            android:id="@+id/Two"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_marginStart="20dp"
            />

        <Button
            android:id="@+id/Three"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_marginStart="20dp" />

        <Button
            android:id="@+id/Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:text="@string/plus"
            android:textSize="20sp"
            android:layout_marginStart="20dp"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/Four"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four" />

        <Button
            android:id="@+id/Five"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:layout_marginStart="20dp"
            />

        <Button
            android:id="@+id/Six"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/Minus"
            android:background="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Seven"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven" />

        <Button
            android:id="@+id/Eight"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:layout_marginStart="20dp" />

        <Button
            android:id="@+id/Nine"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/Multiply"
            android:background="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Zero"
            style="@android:style/Widget.Material.Button.Colored"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="109dp"
            android:text="@string/zero" />

        <Button
            android:id="@+id/Divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="127.5dp"
            android:textSize="20sp"
            android:background="@color/purple_200"
            android:text="@string/divide" />
    </LinearLayout>

    <Button
        android:id="@+id/Equal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purple_200"
        android:text="@string/equality"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:text="@string/clear_text"/>
</LinearLayout>